--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,15 @@
     }
   } 
 
+  html{
+    scroll-behavior: smooth;
+  }
 
 body{
-    background-color: #0D0D0D;
+    background-color: #000000;
     color: #f9f6f6 !important;
     overflow-x: hidden;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     /* overflow: hidden; */
     /* height: 10000px; */
 }
@@ -62,7 +66,7 @@ img{
     transition: all .7s ;
 }
 .movie:hover img{
-    transform: scale(1.3) rotate(5deg);
+    transform: scale(1.2) rotate(5deg);
     filter: blur(2px);
     /* transform: rotate(10deg); */
     
@@ -80,9 +84,31 @@ img{
     z-index: 999;
     overflow: hidden;
     transition: all .7s ease-in-out;
+    /* display: inline-block; */
 }
 
+p{
+    font-weight: 200;
+    font-size: 16px;
+    color: #EDEDED;
+}
+h1{
+    font-weight: 400;
+    font-size: 35px;
+}
+h3{
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 5px;
+}
 
+.icon{
+    width: 40px;
+    height: 40px;
+    border: 2px solid green;
+    font-size: 17px;
+}
 
 .movie:hover .layer{
     opacity: 1;
@@ -109,7 +135,7 @@ a{
 
 a:hover{
     position: relative;
-    top: -1px;
+    /* top: -1px; */
     color: #ff655c ;
 }
 
@@ -124,23 +150,94 @@ a:hover{
 }
 
 .animate__animated{
-    --animate-duration: .7s;
+    --animate-duration: 1s;
     display: none;
-    opacity: 0;
-    visibility: hidden;
-    /* transition: all 1s ease-in-out; */
+    /* opacity: 0; */
+    /* visibility: hidden; */
+    /* transition: all 2s ease-in-out; */
   
 }
 
 .movie:hover .animate__animated{
-    visibility: visible; 
+    /* visibility: visible;  */
     display: block;
-    opacity: 1;
+    /* opacity: 1; */
     /* --animate-delay: 0.9s; */
-
 }
 
 :root {
     --animate-duration: 800ms;
     --animate-delay: 0.9s;
   }
+
+
+/* /////////////////////////////////////// */
+#contact .form-control
+{
+    box-shadow: none;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #fff;
+    border-color: #CED4DA;
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+    color: #fff;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+}
+#contact .form-control::placeholder
+{
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    appearance: none;
+}
+input[type=number] {
+    -moz-appearance: textfield;
+    appearance: none;
+  }
+
+.form-btn
+{
+    background-color: var(--main-color);
+    color: #fff!important;
+    padding: 10px 25px;
+    transition: all 0.2s ease-in-out;
+    border: none;
+}
+.form-btn:hover
+{
+    color: #000!important;
+    background-color: #F8F6F6;
+}
+.showPass
+{
+    background-color: transparent;
+    position: absolute;
+    right: 10px;
+    bottom: -20px;
+    cursor: pointer;
+    opacity: 0;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+}
+.error
+{
+    color: rgb(214, 46, 51);
+    position: absolute;
+    font-weight: 700;
+}
+
