--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ span:hover{
     /* top: -1px; */
     color: #ff655c ;
 }
-a:hover{
+li:hover{
     position: relative;
     /* top: -1px; */
     color: #ff655c ;
